# bip39-morse

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  LICENSE  LICENSE.md  README.md  README.ru.md  SECURITY.md  bip39-morse-cli-prompt.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_morse_locale.yml
.github/workflows/: release-pypi.yml  release-testpypi.yml  tests.yml
bip39_morse/: bip39.py  bitstream.py  cli.py  morse.py  reverse.py  tui.py  tui_reverse.py
docs/: PUBLISHING.md  demo-reverse.cast  demo.cast  generate_demo.py
examples/: czech.txt  french.txt  german.txt  greek.txt  japanese.txt  polish.txt  spanish.txt
tests/: generate_morse_parity_vectors.py  test_bip39.py  test_bitstream.py  test_e2e.py  test_morse.py  test_morse_tables.py  test_parity_vectors.py  test_reverse.py  test_roundtrip_property.py
tests/vectors/: morse_parity_vectors.json  trezor_vectors.json
